# jagua-rs_wasm

./: Cargo.toml  README.md  README_SELF.md  help.html  package-lock.json  search-index.js  settings.html  src-files.js
assets/: albano.json  baldacci1.json  baldacci2.json  baldacci3.json  baldacci4.json  baldacci5.json  baldacci6.json  mao.json  shirts.json  swim.json  trousers.json
benchmarks/: data.js
fern/: all.html  enum.InitError.html  fn.log_file.html  index.html  struct.Dispatch.html  struct.FormatCallback.html  struct.Output.html  struct.Panic.html  type.Filter.html  type.Formatter.html
float_cmp/: all.html  index.html  macro.approx_eq.html  macro.assert_approx_eq.html  struct.F32Margin.html  struct.F64Margin.html  trait.ApproxEq.html  trait.ApproxEqRatio.html  trait.ApproxEqUlps.html  trait.FloatMargin.html  trait.Ulps.html
float_next_after/: all.html  index.html  trait.NextAfter.html
geo/: all.html  enum.Closest.html  index.html  macro.coord.html  macro.geometry_delegate_impl.html  macro.line_string.html  macro.point.html  macro.polygon.html  trait.CoordFloat.html  trait.CoordNum.html  trait.GeoFloat.html  trait.GeoNum.html
geo_buffer/: all.html  fn.buffer_multi_polygon.html  fn.buffer_multi_polygon_rounded.html  fn.buffer_polygon.html  fn.buffer_polygon_rounded.html  fn.skeleton_of_multi_polygon_to_linestring.html  fn.skeleton_of_polygon_to_linestring.html  index.html  struct.Coordinate.html  struct.Ray.html
geo_types/: all.html  enum.Error.html  index.html  macro.coord.html  macro.wkt.html  (+8 more)
gui/: Cargo.toml  package.json  vite.config.ts
gui/backend/: Cargo.toml
gui/backend/src/: main.rs
gui/backend/static/assets/solutions/: sol_web.json
gui/backend/static/solutions/: sol_web.json
gui/backend/static/style/: index.css
gui/backend/templates/: index.html.tera  solution.html.tera
gui/client/: index.html  package-lock.json  package.json  vite.config.ts
gui/client/src/: App.tsx  Enums.tsx  main.tsx
gui/client/src/components/: Header.tsx  Home.tsx  Input.tsx  Result.tsx  SVGMani.tsx  Solution.tsx
gui/client/src/interfaces/: interfaces.ts
gui/client/src/services/: wasmWorker.ts
gui/client/src/style/: Header.module.css  Home.module.css  Input.module.css  Result.module.css  index.css  input.css  result.css
gui/client/src/styles/: Header.module.css  Home.module.css  SVGMani.module.css
gui/client/wasm/: Cargo.toml
gui/client/wasm/src/: lib.rs
gui/frontend/: README.md  package-lock.json  package.json
gui/frontend/public/: index.html
gui/frontend/src/: App.js  App.tsx
gui/frontend/src/components/: Home.js  Input.js
gui/frontend/src/style/: index.css
gui/frontend2/: package-lock.json  package.json
gui/server/: Cargo.toml  README.md
gui/server/src/: main.rs
gui/server/static/solutions/: sol_web.json
gui/src/: main.rs
gui/src/components/: SVGMani.tsx
gui/static/style/: index.css
gui/templates/: index.html.tera
gui/wasm/: Cargo.toml  LICENSE_MIT
svg_collision/: Cargo.toml
svg_collision/src/: config.rs  main.rs
svg_collision/src/io/: mod.rs  svg_parser.rs
(+1346 files in other folders)
